feat: added better picture for current footer

--- a/src/presentation/slides.jade
+++ b/src/presentation/slides.jade
@@ -20,8 +20,10 @@ section
                     .left-align.
                         We have several javascript files for a relatively small project in Newstalk,
                         the problem with this approach is that We must document the scope of things.
-                        Which javascript belongs to a page, which one belongs to a higher level functionality,
-                        or which one is a module that contains several pieces of code.
+                    ul
+                        li Does the file belong to the page?
+                        li Higher level?
+                        li Is it a module or some utility functions to use all around?
     section
         h2 Dependency Management
         .container
